moving to TemplatePG + misc updates
Ignore-this: 3c52e512d4d993691a06cfa3e9b0d00e

darcs-hash:20110227090425-c4631-510b22e84c965b875e71a20efc73c2471e398ff9.gz

--- a/cms/Makefile
+++ b/cms/Makefile
@@ -1,15 +1,23 @@
 # jekor.com CMS CGI
 
 cgi := cms.cgi
-
 lhss := $(shell find . -name "*.lhs" -print)
+binary := dist/build/$(cgi)/$(cgi)
 
-all : $(cgi)
+all : $(binary)
 
 doc : cms.pdf
 
-cms.cgi : $(lhss)
-	ghc -Wall -fglasgow-exts -threaded --make -o $(cgi) $^
+configure : $(lhss)
+	cabal configure
+
+$(binary) : $(lhss)
+	TPG_DB="cms" TPG_USER="cms" cabal build
+
+install : $(binary)
+	mv ../$(cgi) ../$(cgi).old
+	cp $(binary) ../$(cgi)
+	strip ../$(cgi)
 
 cms.pdf : CMS.tex
 	pdflatex $<
@@ -17,16 +25,14 @@ cms.pdf : CMS.tex
 CMS.tex : $(lhss)
 	lhs2TeX CMS.lhs > $@
 
-install : cms.cgi
-	mv ~/.cabal/bin/cms.cgi ~/.cabal/bin/cms.cgi.backup
-	cp cms.cgi ~/.cabal/bin/cms.cgi
-	-killall $(cgi)
-
 tags : $(lhss)
 	hasktags -e $^
 
+lint : $(lhss)
+	hlint $^
+
 clean :
-	find . -iregex ".*\.\(o\|hi\|o-boot\|hi-boot\)" -print0 | xargs -0 rm
+	cabal clean
 
 metrics : $(lhss)
 	@echo -e -n "\tSLOC: "
