Adding an updated version of my resume (now as HTML).

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /www/text.html
 application.pdf
 /.sass-cache
+/www/resume/text.html
+/www/script/bootstrap/application.javascript
+/www/script/domcharts/bar/application.json
