Don't need to track this either.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ application.pdf
 /www/image/logo/tomshardware/image.png
 /www/image/logo/yucaipa/image.gif
 /TODO
+/www/image/glyphicons-halflings/image.png
