Ignore some generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ application.pdf
 /www/image/glyphicons-halflings/image.png
 /www/*/application.json
 /www/*/text.html
+/var/nav.html
+/var/sites.json
