Allow a couple redirects to other sites for YouTube external annotations.

--- a/etc/lighttpd.conf
+++ b/etc/lighttpd.conf
@@ -1,5 +1,7 @@
 $HTTP["host"] == "jekor.com" {
   accesslog.filename = logdir + "/jekor.com.log"
+  url.redirect = ("^/twitter" => "https://twitter.com/jekor",
+                  "^/github/(.*)" => "https://github.com/jekor/$1")
   scgi.server = (
     "/" => ((
       "host" => "127.0.0.1",
